[gd_scene load_steps=8 format=2]

[ext_resource path="res://tudo/fonts/BRITANIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://tudo/Botoes/botao.png" type="Texture" id=2]
[ext_resource path="res://tudo/Botoes/botaoAoClicar.png" type="Texture" id=3]
[ext_resource path="res://tudo/Botoes/BotaoClique.png" type="Texture" id=4]
[ext_resource path="res://tudo/imagens/menu/comeca.jpg" type="Texture" id=5]
[ext_resource path="res://script/COMECAR.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="COMECAR" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 94, 197 )
scale = Vector2( 0.502778, 0.475781 )
texture = ExtResource( 5 )
offset = Vector2( 163.094, 219.639 )

[node name="botao1" type="TextureButton" parent="."]
margin_left = 95.0
margin_top = 155.0
margin_right = 270.0
margin_bottom = 205.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao1"]
margin_left = 3.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao2" type="TextureButton" parent="."]
margin_left = 94.0
margin_top = 237.0
margin_right = 269.0
margin_bottom = 287.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao2"]
margin_left = 5.0
margin_right = 171.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao3" type="TextureButton" parent="."]
margin_left = 96.0
margin_top = 320.0
margin_right = 271.0
margin_bottom = 370.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao3"]
margin_left = 2.0
margin_top = 1.0
margin_right = 168.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
